# Dose-Calculation-Qt

./: CMakeLists.txt  CMakeLists.txt.user.zoCQsW  README.md  createdatabase.cpp  createdatabase.h  customer_table.cpp  customer_table.h  customer_table.ui  databaseconfig.cpp  databaseconfig.h  databaseheader.cpp  databaseheader.h  datamanager.cpp  datamanager.h  dosecaluculation.cpp  dosecaluculation.h  dosecaluculation.ui  historypackage.cpp  historypackage.h  historypackage.ui  importpackage.cpp  importpackage.h  importpackage.ui  main.cpp  registcustomer.cpp  resources.qrc  savecustomer.cpp  savecustomer.h  savecustomer.ui  savepackage.cpp  savepackage.h  savepackage.ui  table_data.cpp  table_data.h  table_data.ui
databases/: DosePackageManager.db
